--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainMenu" />
-        <activity android:name=".ListOfPlants" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainMenuActivity"/>
+        <activity android:name=".ListOfPlantsActivity"/>
+        <activity android:name=".LoginActivity"></activity>
     </application>
 
 </manifest>
